Refactoring. Extracting soft with UI to separate image, keep all others in base-dev-env

--- a/base-dev-env/dockerfile
+++ b/base-dev-env/dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:18.04
 
-LABEL version="0.0.1"
-LABEL description="Docker image with all necessary soft for developing"
+LABEL version="0.1.0"
+LABEL description="Docker image with base soft for developing: nano, mc, powershell, git, utils"
 
 ENV ROOT_DIR=/usr/root \
     APP_DIR=apps \
@@ -11,16 +11,12 @@ ENV ROOT_DIR=/usr/root \
 
 WORKDIR $ROOT_DIR
 RUN mkdir ./$INST_DIR
-ADD ./base_install.sh ./$INST_DIR/
+ADD ./ ./$INST_DIR/
 RUN find ./$INST_DIR/ -name '*.sh' -exec chmod a+x {} +
 
 RUN ./$INST_DIR/base_install.sh
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
 
-RUN ./$INST_DIR/tigervnc_install.sh
-RUN ./$INST_DIR/chrome_install.sh
-RUN ./$INST_DIR/xfce_install.sh
-
-RUN ./$INST_DIR/post_install.sh
+RUN ls ./$INST_DIR
 
 WORKDIR ${ROOT_DIR}/$DEV_DIR
