Run bash in the end. WIP with vs code

--- a/base-desktop-dev-env/dockerfile
+++ b/base-desktop-dev-env/dockerfile
@@ -3,12 +3,13 @@ FROM base-dev-env:0.1.0
 LABEL version="0.0.2"
 LABEL description="Docker image with base dev environment + xfce, tigervnc, vscode, chrome"
 
-ENV VNC_COL_DEPTH=24 \
-    VNC_RESOLUTION=1280x1024 \
-    VNC_PW=vncpassword \
-    VNC_VIEW_ONLY=false \
-    DISPLAY=:1 \
-    VNC_PORT=5901
+ENV VNC_PORT=5901 \
+    VNC_PASSWD=ddockerr7 \
+    VNC_DISPLAY=:1 \
+    VNC_COL_DEPTH=24 \
+    VNC_RESOLUTION=1920x1080 \
+    OUTPUT=true
+
 EXPOSE $VNC_PORT
 
 WORKDIR $ROOT_DIR
@@ -18,6 +19,7 @@ RUN find ./$INST_DIR/ -name '*.sh' -exec chmod a+x {} +
 RUN ./$INST_DIR/tigervnc_install.sh
 RUN ./$INST_DIR/chrome_install.sh
 RUN ./$INST_DIR/xfce_install.sh
+RUN ./$INST_DIR/vscode_install.sh
 RUN ./$INST_DIR/post_install.sh
 
 ADD ./xfce/ .
