--- a/base-desktop-dev-env/dockerfile
+++ b/base-desktop-dev-env/dockerfile
@@ -1,6 +1,6 @@
 FROM base-dev-env:0.1.0
 
-LABEL version="0.0.2"
+LABEL version="0.0.4"
 LABEL description="Docker image with base dev environment + xfce, tigervnc, vscode, chrome"
 
 ENV VNC_PORT=5901 \
@@ -8,7 +8,7 @@ ENV VNC_PORT=5901 \
     VNC_DISPLAY=:1 \
     VNC_COL_DEPTH=24 \
     VNC_RESOLUTION=1920x1080 \
-    OUTPUT=true
+    OUTPUT=false
 
 EXPOSE $VNC_PORT
 
@@ -17,12 +17,12 @@ ADD ./* ./$INST_DIR/
 RUN find ./$INST_DIR/ -name '*.sh' -exec chmod a+x {} +
 
 RUN ./$INST_DIR/tigervnc_install.sh
+RUN ./$INST_DIR/vscode_install.sh
 RUN ./$INST_DIR/chrome_install.sh
 RUN ./$INST_DIR/xfce_install.sh
-RUN ./$INST_DIR/vscode_install.sh
 RUN ./$INST_DIR/post_install.sh
 
 ADD ./xfce/ .
 
 ENTRYPOINT ["/root/install/startup.sh"]
-CMD ["--wait"]
+CMD ["/bin/bash"]
